--- a/my-images.html
+++ b/my-images.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Eding Muhamad Saprudin">
-    <title>Larastocks</title>
+    <title>Larapics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="/">
                 <img src="icons/logo.svg" alt="" width="30" height="24"
                     class="d-inline-block align-text-top color-light">
-                Larastocks
+                Larapics
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse"
                 aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <a href="#" class="btn btn-primary">
+                    <a href="form.html" class="btn btn-primary">
                         <img src="icons/upload.svg" alt="Upload" class="me-2">
                         <span>Upload</span>
                     </a>
@@ -160,8 +160,8 @@
             <p class="float-end mb-1">
                 <a href="#" class="text-decoration-none">Back to top</a>
             </p>
-            <p>Larastocks provides beautiful, high quality & royalty free photos shared by creators everywhere.</p>
-            <p>&copy; 2022 Larastocks</p>
+            <p>Larapics provides beautiful, high quality & royalty free photos shared by creators everywhere.</p>
+            <p>&copy; 2022 Larapics</p>
         </div>
     </footer>
 
