--- a/show.html
+++ b/show.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Eding Muhamad Saprudin">
-    <title>Larastocks</title>
+    <title>Larapics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="/">
                 <img src="icons/logo.svg" alt="" width="30" height="24"
                     class="d-inline-block align-text-top color-light">
-                Larastocks
+                Larapics
             </a>
             <div class="d-flex">
                 <a href='#' class="btn btn-outline-secondary me-2">Register</a>
@@ -155,8 +155,8 @@
             <p class="float-end mb-1">
                 <a href="#" class="text-decoration-none">Back to top</a>
             </p>
-            <p>Larastocks provides beautiful, high quality & royalty free photos shared by creators everywhere.</p>
-            <p>&copy; 2022 Larastocks</p>
+            <p>Larapics provides beautiful, high quality & royalty free photos shared by creators everywhere.</p>
+            <p>&copy; 2022 Larapics</p>
         </div>
     </footer>
 
