--- a/index.html
+++ b/index.html
@@ -31,67 +31,67 @@
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img1.jpeg" alt="Image 1" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img2.jpeg" alt="Image 2" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img3.jpeg" alt="Image 3" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img4.jpeg" alt="Image 4" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img5.jpeg" alt="Image 5" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img6.jpeg" alt="Image 6" class="card-img-top"></a>
-                    <div class="photo-buttons">
+                    <!-- <div class="photo-buttons">
                         <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
                         <form>
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
