Add user, setting and reply-form pages

--- a/user.html
+++ b/user.html
@@ -26,78 +26,69 @@
             </div>
         </div>
     </nav>
+    <section class="jumbotron-author-image-background" style="background-image: url(images/cover-image.jpeg);">
+        <div class="jumbotron jumbotron-fluid py-4">
+            <div class="container-fluid text-center">
+                <h1 class="jumbotron-heading">edmasaru</h1>
+                <p class="lead">Eding Muhamad Saprudin &nbsp; • &nbsp; Indonesia &nbsp; • &nbsp; Member since Oct. 28,
+                    2017 &nbsp; • &nbsp; 40
+                    images</p>
+                <img src="images/user-default.png" class="rounded-circle" alt="...">
+                <div class="mt-3">
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item">
+                            <a href="#" title="Facebook"><img src="icons/facebook.svg" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" title="Twitter"><img src="icons/twitter.svg" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" title="Instagram"><img src="icons/instagram.svg" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" title="Website"><img src="icons/website.svg" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container-fluid mt-4">
         <div class="row" data-masonry='{"percentPosition": true }'>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img1.jpeg" height="100%" alt="Image 1"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img2.jpeg" height="100%" alt="Image 2"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img3.jpeg" height="100%" alt="Image 3"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img4.jpeg" height="100%" alt="Image 4"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img5.jpeg" height="100%" alt="Image 5"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4 mb-4">
                 <div class="card">
                     <a href="show.html"><img src="images/img6.jpeg" height="100%" alt="Image 6"
                             class="card-img-top"></a>
-                    <div class="photo-buttons">
-                        <a href="#" class="btn btn-sm btn-info me-2">Edit</a>
-                        <form>
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
