--- a/settings.html
+++ b/settings.html
@@ -184,7 +184,7 @@
                         <div class="mb-3">
                             <label class="form-label">Email Notifications</label>
                             <div class="form-check">
-                                <input type="hidden" name="settings[email_notification][new_comment]" value="0">
+                                <input type="hidden" name="options[email_notification][new_comment]" value="0">
                                 <input class="form-check-input" type="checkbox"
                                     name="options[email_notification][new_comment]" id="email_notification_no" value="1"
                                     checked>
@@ -192,7 +192,7 @@
                                     comments</label>
                             </div>
                             <div class="form-check">
-                                <input type="hidden" name="settings[email_notification][new_image]" value="0">
+                                <input type="hidden" name="options[email_notification][new_image]" value="0">
                                 <input class="form-check-input" type="checkbox"
                                     name="options[email_notification][new_image]" id="email_notification_yes" value="1"
                                     checked>
